<resources>
    <string name="app_name">Textile Tour</string>
    <string name="load_peer">Load Peer</string>
    <string name="display_name">Display name: %1$s</string>
    <string name="seed">Seed: %1$s</string>
    <string name="search_btn">Search</string>
    <string name="search_by_name">Name</string>
    <string name="search_by_address">Address</string>
    <string name="search">Search</string>
    <string name="add_thread_btn">Add thread</string>
    <string name="add_message_btn">Add message</string>
    <string name="add_file_btn">Add file</string>
    <string name="add_json_thread_btn">Add JSON thread</string>
</resources>
