<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.search.SearchActivity">

    <Spinner
        android:id="@+id/search_by_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/search_by_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/search_by_address_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_address"
        android:inputType="text" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

</LinearLayout>