<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.threads.ThreadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_thread_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onAddMsgThreadClick"
            android:text="@string/add_thread_btn" />

        <Button
            android:id="@+id/add_json_thread_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onAddJsonThreadClick"
            android:text="@string/add_json_thread_btn" />

        <EditText
            android:id="@+id/message_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/add_msg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onAddMessageClick"
            android:text="@string/add_message_btn" />

        <Button
            android:id="@+id/add_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onAddJsonFileClick"
            android:text="@string/add_file_btn" />

        <Button
            android:id="@+id/log_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLogContentClick"
            android:text="Log Files" />

        <TextView
            android:id="@+id/thread_view"
            style="@style/ProfileInfoTextView"
            tools:text="Thread" />
    </LinearLayout>

</ScrollView>